[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Valentin Bersier <vbersier@gmail.com>"]
description = "Trading bot for PancakeSwap"
name = "pancaketrade"
version = "0.5.1"
[tool.poetry.dependencies]
PyYAML = "^5.4.1"
apscheduler = "<4.0.0"
cachetools = "^4.2.2"
click = "^7.1.2"
loguru = "^0.5.3"
peewee = "^3.14.4"
python = "^3.8"
python-telegram-bot = "^13.4.1"
questionary = "^1.9.0"
requests = "^2.25.1"
web3 = "^5.18.0"
yamale = "^3.0.6"
appdirs = "^1.4.4"
[tool.poetry.dependencies.importlib-metadata]
python = "<3.8"
version = "^4.0.1"
[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
mypy = "<0.900"
[tool.poetry.dev-dependencies.black]
allow-prereleases = true
version = "*"
[tool.poetry.scripts]
trade = "pancaketrade:main"
